--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "http-proxy": "^1.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "ng-redux": "^3.4.0-beta.1",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
