--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
+    "gulp-less": "^3.1.0",
     "webpack": "^1.13.1"
   }
 }
