--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-proxy": "^1.14.0",
     "isomorphic-fetch": "^2.2.1",
     "ng-redux": "^3.4.0-beta.1",
+    "ngstorage": "^0.3.11",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
