--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
+    "json-loader": "^0.5.4",
     "webpack": "^1.13.1"
   }
 }
